force-app/main/default/objects/Protected_Customer_Data__c/Protected_Customer_Data__c.object-meta.xml
<CustomObject>
    <label>Protected Customer Data</label>
    <nameField>
        <displayFormat>PCD-{00000000}</displayFormat>
        <label>Protected Customer Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protected Customer Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>