force-app/main/default/objects/Protected_Customer_Data__c/fields/Business_Billing_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Business_Billing_PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Billing PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>