force-app/main/default/objects/Protected_Customer_Data__c/fields/Business_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Business_Billing_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>