force-app/main/default/objects/Protected_Customer_Data__c/fields/Business_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Business_Billing_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>