force-app/main/default/objects/Protected_Customer_Data__c/fields/Business_Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Business_Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>