force-app/main/default/objects/Protected_Customer_Data__c/fields/Business_Fax__c.field-meta.xml
<CustomField>
    <fullName>Business_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Fax</label>
    <type>Phone</type>
</CustomField>