force-app/main/default/objects/Protected_Customer_Data__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>