force-app/main/default/objects/Protected_Customer_Data__c/fields/Created_By_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By User Profile</label>
    <type>Text</type>
</CustomField>