force-app/main/default/objects/Protected_Customer_Data__c/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>