force-app/main/default/objects/Protected_Customer_Data__c/fields/Email_3__c.field-meta.xml
<CustomField>
    <fullName>Email_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email 3</label>
    <type>Email</type>
</CustomField>