force-app/main/default/objects/Protected_Customer_Data__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>