force-app/main/default/objects/Protected_Customer_Data__c/fields/FNB_System_of_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>FNB_System_of_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>FNB System of Record Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>