force-app/main/default/objects/Protected_Customer_Data__c/fields/Last_Modified_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_User_Profile__c</fullName>
    <formula>LastModifiedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified User Profile</label>
    <type>Text</type>
</CustomField>