force-app/main/default/objects/Protected_Customer_Data__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>