force-app/main/default/objects/Protected_Customer_Data__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>