force-app/main/default/objects/Protected_Customer_Data__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>