force-app/main/default/objects/Protected_Customer_Data__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <description>MasterDetail lookup to Account</description>
    <label>Parent Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Protected Customer Data</relationshipLabel>
    <relationshipName>Protected_Customer_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>